fix: dropdown icon spacing

--- a/src/scss/components/_navigation.scss
+++ b/src/scss/components/_navigation.scss
@@ -429,7 +429,8 @@
             &.dropdown-toggle {
               svg {
                 fill: var(--#{$prefix}icon-inverse);
-                margin-top: 3px;
+                margin-left: var(--#{$prefix}icon-spacing);
+                margin-top: 4px;
               }
             }
 
